# FunFetch

./: CMakeLists.txt  README.md
src/: main.cpp
src/.deprecated/: report.cpp  report.hpp
src/dataParser/cpu/: cpu_info.cpp  cpu_info.hpp
src/dataParser/hw/: hw_info.cpp  hw_info.hpp
src/dataParser/os/: os_info.cpp  os_info.hpp
src/dataParser/sys/: sys_info.cpp  sys_info.hpp
src/support/: report.cpp  report.hpp  stringa.cpp  stringa.hpp  tools.cpp  tools.hpp
